2011-08-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.hpp: Richer error messages.

2011-08-08 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/getFirstASData.sh: Get more detailed information for the first answer set found.

2011-08-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/avgScript-all.sh: Get average data (more detail information) from random program experiments.

2011-07-23 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixed largest bottom.

2011-07-22 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Log time analysis.

	* generator/createBigEvenOdd.sh: Create a big benchmarks for Even-Odd program.

	* include/dlvhex/MLPSolver.hpp: Tests for -n and --split.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/module-EvenOdd-n1.out: Likewise.

2011-07-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update.

2011-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/avgScript.sh: Computes average performance for each call pattern.

2011-06-27 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestHexParserModule.cpp: Relative path for examples.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/Makefile.am: Fixed include directory of external solver.

2011-06-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/TestMLPSolver.cpp: Removed some hard-coded relative
	paths, missing bits and pieces are for Tri to fix.

2011-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Create libhex.a and libhexND.a to reduce
	compile-time by 33%. Can be further improved by compiling
	$(top_srcdir)/src/dlvhex/lib{X,Y,Z}.a.

	* README: Small fixes.

	* src/dlvhex/Makefile.am (dlvhex_LDADD): Move @LIBCURL@ to the
	end of the list, linux i386 linker is sensitive to this.

	* configure.ac: Fix messages.
