@@ -1,3 +1,7 @@
+2011-08-17 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/MLPSolver.hpp: Cleaning up.
+
 2011-08-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* include/dlvhex/ModuleSyntaxChecker.hpp: Richer error messages.
